# Trading-Server

./: .gitignore  README.md  docker-compose.yml
client/: CMakeLists.txt  Dockerfile
client/include/: Client.h  client.h
client/src/: client.cc  main.cc
core/: OrderBook.h  constants.h  logging.h  orderbook.cc
server/: CMakeLists.txt  Dockerfile
server/include/: OrderBook.h  Server.h  logging.h  server.h
server/src/: main.cc  orderbook.cc  server.cc
